--- a/skincare-frontend/my-heroui-app/index.html
+++ b/skincare-frontend/my-heroui-app/index.html
@@ -1,12 +1,12 @@
-<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Skincare App</title>
+    <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div> <!-- Root div for React to render -->
+    <div id="app"></div>  
+    <script type="module" src="/src/index.jsx"></script>  
   </body>
 </html>
