--- a/skincare-frontend/my-heroui-app/index.html
+++ b/skincare-frontend/my-heroui-app/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Clean Skincare Products</title>
   </head>
   <body>
     <div id="app"></div>  
-    <script type="module" src="/src/index.jsx"></script>  
+    <!-- Ensure script path is correct for the bundler, generally it should be the built file, not the raw .jsx -->
+    <script type="module" src="./src/index.jsx"></script> 
   </body>
 </html>
