--- a/skincare-frontend/my-heroui-app/index.html
+++ b/skincare-frontend/my-heroui-app/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <title>Clean Skincare Products</title>
   </head>
   <body>
-    <div id="app"></div>  
-    <!-- Ensure script path is correct for the bundler, generally it should be the built file, not the raw .jsx -->
-    <script type="module" src="./src/index.jsx"></script> 
+    <div id="app"></div>  <!-- React App Container -->
+
+    <script type="module" src="./src/index.jsx"></script>
   </body>
 </html>
